font and border effect

--- a/v2/index.html
+++ b/v2/index.html
@@ -21,7 +21,7 @@
     <script src="../lib/jquery.js"></script>
     <script src="../lib/aos/aos.js"></script>
 </head>
-<body class="v2-theme h-100 bg-light">
+<body class="v2-theme h-100">
 <nav class="container-fluid d-block d-xl-none navbar navbar-expand-xl navbar-dark bg-cap-trans py-0">
     <div class="row bg-cap-light hamburger-list">
         <div class="collapse" id="hamburgerMenu">
@@ -94,9 +94,9 @@
     </div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-12 text-center py-5 my-5">
+<div class="container bg-light py-5 radius-2">
+    <div class="row px-3">
+        <div class="col-12 text-center py-5 my-5 theme-1-text">
             <div class="d-none d-lg-block">
                 <h1 class="banner-text-h1">入住 WANA 星之前，需要知道的事</h1>
             </div>
@@ -106,20 +106,26 @@
             </div>
         </div>
     </div>
-    <div class="row justify-content-around align-items-center">
-        <div class="col-12 col-lg-4 order-lg-last text-center">
-            <img src="assets/image/about_1.png" class="img-fluid"  alt="about wana"/>
+    <div class="row justify-content-around align-items-center py-3 py-lg-5">
+        <div class="col-8 col-lg-4 order-lg-last text-center">
+            <img src="assets/image/about_1.png" class="img-fluid"  alt="about wana gif1"/>
         </div>
-        <div class="col-12 col-lg-7">
-            <h3 class="banner-text-h6">WANA 是人類發現的第一顆具有生命、有語言甚至有文化的新星！在WANA星上的居民稱作 WAVATAR ，並用「WANA！」作為打招呼，據調查發現總數為 11400 隻。</h3>
+        <div class="col-8 col-lg-6 py-5">
+            <h3 class="banner-text-h6">
+                WANA 是人類發現的第一顆具有生命、有語言甚至有文化的新星！在WANA星上的居民稱作 WAVATAR ，並用「WANA！」作為打招呼，據調查發現總數為 11400 隻。
+            </h3>
         </div>
     </div>
-    <div class="row justify-content-around align-items-center">
-        <div class="col-12 col-lg-4">
-            <img src="assets/image/about_2.gif" class="img-fluid"  alt="about wana"/>
+    <div class="row justify-content-around align-items-center py-3 py-lg-5">
+        <div class="col-8 col-lg-4 py-5">
+            <img src="assets/image/about_2.gif" class="img-fluid"  alt="about wana gif2"/>
         </div>
-        <div class="col-12 col-lg-7">
-            <h3 class="banner-text-h6">WAVATAR 都能改變自己的樣貌，隨著不同的心情組合出喜愛的種類，目前已調查出貓族、鳥族、熊族、猴族還有許多人類無法言喻的種族等著你發現！ WANA 星正孕育一個正向、溫暖的藏身處，讓每位入籍者都能抒發心情、傳遞理想、提供建議，甚至還能因此獲得回饋！</h3>
+        <div class="col-10 col-lg-6">
+            <h3 class="banner-text-h6">
+                WAVATAR 都能改變自己的樣貌，隨著不同的心情組合出喜愛的種類，目前已調查出貓族、鳥族、熊族、猴族還有許多人類無法言喻的種族等著你發現！
+                <br><br>
+                WANA 星正孕育一個正向、溫暖的藏身處，讓每位入籍者都能抒發心情、傳遞理想、提供建議，甚至還能因此獲得回饋！
+            </h3>
         </div>
     </div>
 </div>
