--- a/v2/index.html
+++ b/v2/index.html
@@ -96,7 +96,7 @@
 
 <div class="container bg-light py-5 radius-2">
     <div class="row px-3">
-        <div class="col-12 text-center py-5 my-5 theme-1-text">
+        <div class="col-12 text-center py-5 my-5 effect-text-brand">
             <div class="d-none d-lg-block">
                 <h1 class="banner-text-h1">入住 WANA 星之前，需要知道的事</h1>
             </div>
@@ -126,6 +126,40 @@
                 <br><br>
                 WANA 星正孕育一個正向、溫暖的藏身處，讓每位入籍者都能抒發心情、傳遞理想、提供建議，甚至還能因此獲得回饋！
             </h3>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-12 text-center py-5 my-5 effect-text-light">
+            <h1 class="banner-text-h1">\ 搭配出你的 WAVATAR! /</h1>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">Slide 1</div>
+                    <div class="swiper-slide">Slide 2</div>
+                    <div class="swiper-slide">Slide 3</div>
+                </div>
+                <div class="swiper-pagination"></div>
+
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-12 text-center py-5 my-5 effect-text-light">
+            <h1 class="banner-text-h1">平易近人的WAVATAR</h1>
         </div>
     </div>
 </div>
