--- a/v2/index.html
+++ b/v2/index.html
@@ -21,7 +21,7 @@
     <script src="../lib/jquery.js"></script>
     <script src="../lib/aos/aos.js"></script>
 </head>
-<body class="v2-theme h-100">
+<body class="v2-theme h-100 bg-base">
 <nav class="container-fluid d-block d-xl-none navbar navbar-expand-xl navbar-dark bg-cap-trans py-0">
     <div class="row bg-cap-light hamburger-list">
         <div class="collapse" id="hamburgerMenu">
@@ -132,37 +132,80 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-12 text-center py-5 my-5 effect-text-light">
-            <h1 class="banner-text-h1">\ 搭配出你的 WAVATAR! /</h1>
+        <div class="col-12 text-center py-5 my-5">
+            <h1 class="banner-text-h1 effect-text-light">\ 搭配出你的 WAVATAR! /</h1>
         </div>
     </div>
 </div>
 
-<div class="container">
+
+<div class="container-fluid bg-cap-lighter py-5">
     <div class="row">
-        <div class="col-12">
-            <div class="swiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">Slide 1</div>
-                    <div class="swiper-slide">Slide 2</div>
-                    <div class="swiper-slide">Slide 3</div>
-                </div>
-                <div class="swiper-pagination"></div>
-
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-            </div>
+        <div class="col-12 text-center py-5 my-5">
+            <h1 class="banner-text-h1 effect-text-light">平易近人的WAVATAR</h1>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-10 col-lg-8">
+            <h3 class="banner-text-h6 text-white">建立於 Solana 上的 WANA 星，將分為 3 階段鑄造，第一階段盲盒為 1.5SOL，每個盲盒中包含所有配件加上一個圖像，每個配件都是一個獨立的 NFT，過程中還有豐富的活動及空投等待你的加入。為了讓更多人能夠參與，我們限定一個錢包地址購買上限為 5 個盲盒。</h3>
         </div>
     </div>
 </div>
 
-<div class="container">
+<div class="container-fluid bg-cap-light">
+    <div class="swiper character">
+        <div class="swiper-wrapper py-5">
+            <div class="swiper-slide"><img src="assets/image/SHOW/SHOW1.png" class="character-img"></div>
+            <div class="swiper-slide"><img src="assets/image/SHOW/SHOW2.png" class="character-img"></div>
+            <div class="swiper-slide"><img src="assets/image/SHOW/SHOW3.png" class="character-img"></div>
+            <div class="swiper-slide"><img src="assets/image/SHOW/SHOW4.png" class="character-img"></div>
+            <div class="swiper-slide"><img src="assets/image/SHOW/SHOW5.png" class="character-img"></div>
+        </div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+    </div>
+</div>
+
+<div class="container-fluid bg-cap-lighter py-5">
+    <div class="d-flex justify-content-center my-4">
+        <div class="btn btn-primary btn-xxl bg-brand-linear border-white border-3">
+            <a href="#" class="text-white text-decoration-none" target="_blank">加入DISCORD</a>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-12 text-center">
+            <h3 class="banner-text-h6 text-brand">白名單抽獎活動進行中，快加入DC以掌握最新消息</h3>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid bg-base py-5">
     <div class="row">
-        <div class="col-12 text-center py-5 my-5 effect-text-light">
-            <h1 class="banner-text-h1">平易近人的WAVATAR</h1>
+        <div class="col-12 text-center py-5 my-5">
+            <h1 class="banner-text-h1 effect-text-light">WANA記憶盃</h1>
         </div>
     </div>
 </div>
+
+<div class="container-fluid bg-base py-5">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h1 class="banner-text-h1 effect-text-light">WANA星的發展</h1>
+        </div>
+    </div>
+    <div class="row justify-content-center text-center">
+        <h3 class="banner-text-h6 text-brand">從 NFT 開始到Web3社群論壇</h3>
+    </div>
+</div>
+
+<div class="container-fluid bg-base py-5">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h1 class="banner-text-h1 effect-text-light">團隊故事</h1>
+        </div>
+    </div>
+</div>
+
 
 </body>
 </html>
