temp: comming soon

--- a/v2/index.html
+++ b/v2/index.html
@@ -186,6 +186,22 @@
         </div>
     </div>
 </div>
+<div class="container bg-light radius-2 py-5">
+    <div class="row px-3 pt-5 mt-5">
+        <div class="col-12 text-center effect-text-brand">
+            <h1 class="banner-text-h1">Coming soon......</h1>
+        </div>
+    </div>
+    <div class="row px-3 pb-5 mb-5">
+        <div class="col-12 text-center text-black">
+            <h3>記憶挑戰賽即將登場！
+                <br>
+                凡完成賽事有機會獲得精美小禮物
+            </h3>
+        </div>
+    </div>
+</div>
+
 
 <div class="container-fluid bg-base py-5">
     <div class="row">
@@ -195,6 +211,24 @@
     </div>
     <div class="row justify-content-center text-center">
         <h3 class="banner-text-h6 text-brand">從 NFT 開始到Web3社群論壇</h3>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row justify-content-center ">
+        <div class="col-12">
+            <img src="assets/image/Star1.png" class="img-fluid">
+        </div>
+        <div class="col-12">
+            <h3 class="banner-text-h4 effect-text-brand">10%</h3>
+        </div>
+        <div class="col-12 ">
+            <ul class="text-center">
+                <li>區塊鏈知識推廣</li>
+                <li>白名單抽獎活動</li>
+                <li>OG WAVATAR 競標</li>
+            </ul>
+        </div>
     </div>
 </div>
 
