--- a/v2/index.html
+++ b/v2/index.html
@@ -215,15 +215,13 @@
 </div>
 
 <div class="container">
-    <div class="row justify-content-center ">
-        <div class="col-12">
+    <div class="row justify-content-center align-items-start">
+        <div class="col-12 col-lg-4 text-center">
             <img src="assets/image/Star1.png" class="img-fluid">
         </div>
-        <div class="col-12">
-            <h3 class="banner-text-h4 effect-text-brand">10%</h3>
-        </div>
-        <div class="col-12 ">
-            <ul class="text-center">
+        <div class="col-12 col-lg-8 text-center text-lg-start">
+            <h3 class="banner-text-h2 effect-text-brand">10%</h3>
+            <ul class="d-inline-block text-white">
                 <li>區塊鏈知識推廣</li>
                 <li>白名單抽獎活動</li>
                 <li>OG WAVATAR 競標</li>
