temp: font-text

--- a/v1/index.html
+++ b/v1/index.html
@@ -114,7 +114,7 @@
             <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/animate_1.png')"></div>
         </div>
         <div class="col-12 col-lg-7">
-            <p class="banner-layout d-flex align-items-center text-white banner-text-h6 ps-md-5 ms-lg-5">
+            <p class="banner-layout d-flex align-items-center text-white banner-text-h5 ps-md-5 ms-lg-5">
                 距離地球約 31800 光年的 WANA 星，閃耀著溫暖的紫黃色，瀰漫著一股天真爛漫，它的白天由一身雪白色的 Abel 精靈守護，夜晚則由紫藍色的 Nydia 精靈管理，每當黃昏時，他倆會在分身之時享受短暫美好的時光，直到某一天......
             </p>
         </div>
@@ -125,7 +125,7 @@
             <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/animate_2.png')"></div>
         </div>
         <div class="col-12 col-lg-7">
-            <p class="banner-layout d-flex align-items-center text-white banner-text-h6 ps-md-5 ms-lg-5">
+            <p class="banner-layout d-flex align-items-center text-white banner-text-h5 ps-md-5 ms-lg-5">
                 一道光束從天空中打落在 Nydia 身旁，原來是來自地球的人類用光束造訪，當 Abel 開心轉過身才發現，Nydia 已被嚇得無影無蹤......
             </p>
         </div>
@@ -136,7 +136,7 @@
             <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/animate_3.png')"></div>
         </div>
         <div class="col-12 col-lg-7">
-            <p class="banner-layout d-flex align-items-center text-white banner-text-h6 ps-md-5 ms-lg-5">
+            <p class="banner-layout d-flex align-items-center text-white banner-text-h5 ps-md-5 ms-lg-5">
                 Abel 只好將超能力賦予來造訪的人類，請求能夠幫忙尋找 Nydia 以維持 WANA 星球的正常運作。
             </p>
         </div>
@@ -147,7 +147,7 @@
             <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/animate_4.png')"></div>
         </div>
         <div class="col-12 col-lg-7">
-            <p class="banner-layout d-flex align-items-center text-white banner-text-h6 ps-md-5 ms-lg-5">
+            <p class="banner-layout d-flex align-items-center text-white banner-text-h5 ps-md-5 ms-lg-5">
                 Abel 陸續將金、木、水、火、土五種分別放置在 999 位超能人類身上，獲得特殊能力的人類，在外貌上也逐漸改變...
             </p>
         </div>
@@ -503,7 +503,7 @@
                     <img class="img-fluid article-image" src="assets/image/article_thumbnail_1.png"/>
                     <div class="card-body text-white p-lg-4">
                         <h5 class="card-title banner-text-h4">SANDBOX?</h5>
-                        <p class="card-text">
+                        <p class="card-text banner-text-h6">
                             虛擬世界的土地可以改建、買賣！🤩元宇宙目前的領跑者《 The Sandbox 》
                         </p>
                     </div>
@@ -705,7 +705,7 @@
     </div>
     <hr class="text-white">
     <div class="row text-center">
-        <div class="text-white">@ 2022 WANA</div>
+        <div class="text-white pt-1 pb-2">@ 2022 WANA</div>
     </div>
 </footer>
 </body>
