--- a/v2/index.html
+++ b/v2/index.html
@@ -215,16 +215,52 @@
 </div>
 
 <div class="container">
-    <div class="row justify-content-center align-items-start">
-        <div class="col-12 col-lg-4 text-center">
+    <div class="row justify-content-center align-items-start mb-5">
+        <div class="col-12 offset-lg-2 col-lg-2 text-center">
             <img src="assets/image/Star1.png" class="img-fluid">
         </div>
         <div class="col-12 col-lg-8 text-center text-lg-start">
-            <h3 class="banner-text-h2 effect-text-brand">10%</h3>
-            <ul class="d-inline-block text-white">
-                <li>區塊鏈知識推廣</li>
+            <h3 class="banner-text-h2 effect-text-brand py-3">10%</h3>
+            <ul class="d-inline-block text-white banner-text-h4 text-start">
+                <li>區塊鏈<span class="text-brand">知識推廣</span></li>
                 <li>白名單抽獎活動</li>
-                <li>OG WAVATAR 競標</li>
+                <li><span class="text-brand">OG WAVATAR</span> 競標</li>
+            </ul>
+        </div>
+    </div>
+    <div class="row justify-content-center align-items-start mb-5">
+        <div class="col-12 offset-lg-2 col-lg-2 text-center">
+            <img src="assets/image/Star2.png" class="img-fluid">
+        </div>
+        <div class="col-12 col-lg-8 text-center text-lg-start">
+            <h3 class="banner-text-h2 effect-text-light py-3">30%</h3>
+            <ul class="d-inline-block text-white banner-text-h4 text-start">
+                <li>第一波 WAVATAR 鑄造：<span class="text-brand">持有者享有投票權利，可以參與下一波鑄造討論！</span></li>
+                <li>盲盒開啟後在官網<span class="text-brand">更換屬於你的 WAVATAR 配件</span></li>
+            </ul>
+        </div>
+    </div>
+    <div class="row justify-content-center align-items-start mb-5">
+        <div class="col-12 offset-lg-2 col-lg-2 text-center">
+            <img src="assets/image/Star2.png" class="img-fluid">
+        </div>
+        <div class="col-12 col-lg-8 text-center text-lg-start">
+            <h3 class="banner-text-h2 effect-text-light py-3">60%</h3>
+            <ul class="d-inline-block text-white banner-text-h4 text-start">
+                <li>官網開發轉帳功能，持有者在轉帳完成後，會落下配件，可以選擇是否購買，增加配件多樣性。</li>
+                <li>第二波鑄造，增加配件種類，打造更獨特的個人頭像NFT（ profile for picture, PFP )。</li>
+            </ul>
+        </div>
+    </div>
+    <div class="row justify-content-center align-items-start mb-5">
+        <div class="col-12 offset-lg-2 col-lg-2 text-center">
+            <img src="assets/image/Star2.png" class="img-fluid">
+        </div>
+        <div class="col-12 col-lg-8 text-center text-lg-start">
+            <h3 class="banner-text-h2 effect-text-light py-3">90%</h3>
+            <ul class="d-inline-block text-white banner-text-h4 text-start">
+                <li>打造 Web3.0 富含交易娛樂與結合 NFT 頭像之區塊鏈社群論壇：讓粉絲集中討論、獲取知識，更在平台的互動中有機會獲取獨一無二的 NFT 頭像配件！</li>
+                <li>啟動WANA幣，持有WAVATAR者可於論壇互動中獲得。</li>
             </ul>
         </div>
     </div>
@@ -237,7 +273,26 @@
         </div>
     </div>
 </div>
-
+<div class="container">
+    <div class="row">
+        <div class="col-8 offset-2 text-white">
+            <h3 class="banner-text-h5 text-brand">｜WANA 星是什麼？｜</h3>
+            <p>WANA 星是一顆座落在 Web3 的新星，一群帶著 WANA 之神所託付使命的使者，希望能夠傳遞給世人「區塊鏈知識」，打造一個讓「區塊鏈初學者」安心交流、輕鬆學習的環境，我們傳遞淺顯易懂的教學文章與知識分享，立志成為一個驅動臺灣社會踏入 Web3 的幕後推手，在未來，我們將創造 Web3 的論壇，提供有趣的社交金融娛樂（SocialFi and Entertainment）與區塊鏈應用（Blockchain Application）。</p>
+            <p>提示：只要在 WANA 星上進行轉帳、互動，就有可能獲得意外的驚喜。</p>
+            <h3 class="banner-text-h5 text-brand">｜為什麼要成為 WANA 星居民？｜</h3>
+            <p>除了可以擁有全臺第一個可自由更換裝扮的 PFP NFT 外，持有 WAVATAR 就等同於支持創立屬於臺灣的 Web3 社交論壇。每個 WAVATAR 持有者將獲得入住 WANA 星的資格，未來將能夠參與 WANA 論壇的決策與發展，共同創造獨一無二的 WANA 生態系！ 持有 WAVATAR ，您將在未來成立的 Web3 論壇中，擁有您個人專屬的 NFT 頭像，代表著您對於 WANA 論壇創立的貢獻，也是您在論壇中身份地位的象徵。持有第一波 WAVATAR 者，如同 WANA 星的初始居民，我們將會不定期舉辦活動以回饋 WAVATAR 持有者，將來無論是論壇成長亦或是後續發售，您將擁有最多的好處與回饋。 </p>
+            <h3 class="banner-text-h5 text-brand">接下來，一起成為WANA的一員吧！</h3>
+            <p>區塊鏈技術必然成為人生中必學的課題，與其等到未來才開始接觸，不如現在起身加入！在不可篡改的記錄下，記下浪漫的這一刻吧ˋuˊ</p>
+            <h3 class="banner-text-h5 text-brand">\ 若您有意願加入團隊或洽談合作，請填寫表單以下、寄信或加入DC聯絡我們 /</h3>
+            <p>聯絡信箱：wanawallet@gmail.com</p>
+        </div>
+    </div>
+    <div class="d-flex justify-content-center py-5">
+        <div class="btn btn-primary btn-xxl bg-brand-linear border-white border-3">
+            <a href="#" class="text-white text-decoration-none" target="_blank">聯絡WANA</a>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
