--- a/v1/index.html
+++ b/v1/index.html
@@ -231,8 +231,8 @@
                                 <div class="swiper-slide"><img src="assets/layers-demo/eyes/E10.png" class="img-fluid"/></div>
                             </div>
                         </div>
-                        <div class="swiper-button-prev dress-eyes scale-2x0 mv-left-lg-4 btn shadow-none text-white"><</div>
-                        <div class="swiper-button-next dress-eyes scale-2x0 mv-right-lg-4 btn shadow-none text-white">></div>
+                        <div class="swiper-button-prev dress-eyes scale-2x0 mv-left-lg-3 mv-left-xl-4 btn shadow-none text-white"><</div>
+                        <div class="swiper-button-next dress-eyes scale-2x0 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-white">></div>
                     </div>
 
                     <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x0 mv-down-lg-0x5 bg-accessory-linear">
@@ -246,8 +246,8 @@
                                 <div class="swiper-slide"><img src="assets/layers-demo/clothes/C10.png" class="img-fluid"/></div>
                             </div>
                         </div>
-                        <div class="swiper-button-prev dress-clothes scale-2x0 mv-left-lg-4 btn shadow-none text-white"><</div>
-                        <div class="swiper-button-next dress-clothes scale-2x0 mv-right-lg-4 btn shadow-none text-white">></div>
+                        <div class="swiper-button-prev dress-clothes scale-2x0 mv-left-lg-3 mv-left-xl-4 btn shadow-none text-white"><</div>
+                        <div class="swiper-button-next dress-clothes scale-2x0 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-white">></div>
                     </div>
 
                 </div>
@@ -330,8 +330,8 @@
                                 <div class="swiper-slide"><img src="assets/layers-demo/hair/H10.png" class="img-fluid"/></div>
                             </div>
                         </div>
-                        <div class="swiper-button-prev dress-hair scale-2x0 mv-left-lg-4 btn shadow-none text-white"><</div>
-                        <div class="swiper-button-next dress-hair scale-2x0 mv-right-lg-4 btn shadow-none text-white">></div>
+                        <div class="swiper-button-prev dress-hair scale-2x0 mv-left-lg-3 mv-left-xl-4 btn shadow-none text-white"><</div>
+                        <div class="swiper-button-next dress-hair scale-2x0 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-white">></div>
                     </div>
 
                     <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x25 mv-down-lg-0x5 bg-accessory-linear">
@@ -345,8 +345,8 @@
                                 <div class="swiper-slide"><img src="assets/layers-demo/background/BG5.png" class="img-fluid"/></div>
                             </div>
                         </div>
-                        <div class="swiper-button-prev dress-background scale-2x0 mv-left-lg-4 btn shadow-none text-white"><</div>
-                        <div class="swiper-button-next dress-background scale-2x0 mv-right-lg-4 btn shadow-none text-white">></div>
+                        <div class="swiper-button-prev dress-background scale-2x0 mv-left-lg-3 mv-left-xl-4 btn shadow-none text-white"><</div>
+                        <div class="swiper-button-next dress-background scale-2x0 mv-right-lg-3 mv-right-xl-4 btn shadow-none text-white">></div>
                     </div>
 
                 </div>
@@ -495,7 +495,7 @@
     <h1 class="text-white banner-text-h1 py-5">超能人新手村</h1>
 </div>
 <!-- 第二三部分 文章滑動區塊-->
-<div class="container-sm position-relative">
+<div class="container position-relative">
     <div class="swiper article px-3">
         <div class="swiper-wrapper py-3">
             <div class="swiper-slide h-auto">
@@ -552,7 +552,7 @@
 <div class="container">
     <ul class="row mb-3">
         <li class="col-12 my-4">
-            <div class="card bg-white faq-box py-4 mx-4">
+            <div class="card bg-white radius-2 py-4 mx-4">
                 <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
                     <a href="#faq_1" class="stretched-link text-base text-decoration-none"
                        data-bs-toggle="collapse">Q1. 什麼是WANA ?</a>
@@ -568,7 +568,7 @@
         </li>
 
         <li class="col-12 my-4">
-            <div class="card bg-white faq-box py-4 mx-4">
+            <div class="card bg-white radius-2 py-4 mx-4">
                 <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
                     <a href="#faq_2" class="stretched-link text-base text-decoration-none"
                        data-bs-toggle="collapse">Q2. 發佈時間 ?</a>
@@ -584,7 +584,7 @@
         </li>
 
         <li class="col-12 my-4">
-            <div class="card bg-white faq-box py-4 mx-4">
+            <div class="card bg-white radius-2 py-4 mx-4">
                 <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
                     <a href="#faq_3" class="stretched-link text-base text-decoration-none"
                        data-bs-toggle="collapse">Q3. MINT價格是多少?</a>
@@ -600,7 +600,7 @@
         </li>
 
         <li class="col-12 my-4">
-            <div class="card bg-white faq-box py-4 mx-4">
+            <div class="card bg-white radius-2 py-4 mx-4">
                 <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
                     <a href="#faq_4" class="stretched-link text-base text-decoration-none"
                        data-bs-toggle="collapse">Q4. 我可以用我的WANA NFT做什麼?</a>
@@ -616,7 +616,7 @@
         </li>
 
         <li class="col-12 my-4">
-            <div class="card bg-white faq-box py-4 mx-4">
+            <div class="card bg-white radius-2 py-4 mx-4">
                 <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
                     <a href="#faq_5" class="stretched-link text-base text-decoration-none"
                        data-bs-toggle="collapse">Q5. 如果NFT售完怎麼辦 ?</a>
@@ -632,7 +632,7 @@
         </li>
 
         <li class="col-12 my-4">
-            <div class="card bg-white faq-box py-4 mx-4">
+            <div class="card bg-white radius-2 py-4 mx-4">
                 <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
                     <a href="#faq_6" class="stretched-link text-base text-decoration-none"
                        data-bs-toggle="collapse">Q6. 最後注意安全、我們關心每一位夥伴</a>
@@ -654,7 +654,7 @@
 
 <footer class="container-fluid bg-foot">
     <div class="d-none d-xl-block">
-        <div class="row">
+        <div class="row pt-3">
             <div class="col-12">
                 <div class="d-flex flex-row justify-content-center">
                     <a href="#" class="footer-brand">
