--- a/v2/index.html
+++ b/v2/index.html
@@ -367,6 +367,205 @@
     </div>
 </div>
 
+<!-- 第二三部分 文章滑動區塊-->
+<div class="container-sm position-relative">
+    <div class="swiper article px-3">
+        <div class="swiper-wrapper py-3">
+            <div class="swiper-slide h-auto">
+                <div class="card article-card bg-white text-black h-100 radius-3">
+                    <img class="img-fluid article-image" src="assets/image/article_thumbnail_1.png"/>
+                    <div class="card-body p-lg-4">
+                        <h5 class="card-title banner-text-h4">SANDBOX?</h5>
+                        <p class="card-text banner-text-h6">
+                            虛擬世界的土地可以改建、買賣！🤩元宇宙目前的領跑者《 The Sandbox 》
+                        </p>
+                    </div>
+                    <a class="stretched-link" href="https://www.instagram.com/p/Ca2Ok-NPwEE/?utm_medium=copy_link" target="_blank"></a>
+                </div>
+            </div>
+            <div class="swiper-slide h-auto">
+                <div class="card article-card bg-white text-black h-100 radius-3">
+                    <img class="img-fluid article-image" src="assets/image/article_thumbnail_2.png"/>
+                    <div class="card-body p-lg-4">
+                        <h5 class="card-title banner-text-h4">名人堂</h5>
+                        <p class="card-text">
+                            WANA名人堂！本週繪製的是 #寶博朋友說 Podcast 最新一集來賓
+                        </p>
+                    </div>
+                    <a class="stretched-link" href="https://www.instagram.com/p/Ca9ywAuPyFj/?utm_medium=copy_link" target="_blank"></a>
+                </div>
+            </div>
+            <div class="swiper-slide h-auto">
+                <div class="card article-card bg-white text-black h-100 radius-3">
+                    <img class="img-fluid article-image" src="assets/image/article_thumbnail_3.png"/>
+                    <div class="card-body p-lg-4">
+                        <h5 class="card-title banner-text-h4">漫畫連載</h5>
+                        <p class="card-text">
+                            ABEL擁有超能力，他在星球上都在做些什麼呢？
+                        </p>
+                    </div>
+                    <a class="stretched-link" href="https://www.instagram.com/p/CbKt-fgv_Sf/?utm_medium=copy_link" target="_blank"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="swiper-button-prev article scale-1x25 btn btn-circle bg-white text-black fw-bold">＜</div>
+    <div class="swiper-button-next article scale-1x25 btn btn-circle bg-white text-black fw-bold">＞</div>
+</div>
+
+<div class="container">
+    <ul class="row mb-3 list-unstyled">
+        <li class="col-12 my-4">
+            <div class="card bg-white py-4 mx-4 radius-2">
+                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
+                    <a href="#faq_1" class="stretched-link text-black text-decoration-none" data-bs-toggle="collapse">Q1. 什麼是WANA ?</a>
+                </h3>
+                <div class="collapse" id="faq_1">
+                    <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5 pb-0">
+                        <p class="pb-0">
+                            WANA 是位在 Sol 鏈上的一顆星球，通過擁有我們的 NFT 可以進入 Web3.0 新世界的旅程來創新，一種自由與包容的共同創造體驗，和我們一起創造宇宙吧！
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </li>
+
+        <li class="col-12 my-4">
+            <div class="card bg-white py-4 mx-4 radius-2">
+                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
+                    <a href="#faq_2" class="stretched-link text-black text-decoration-none" data-bs-toggle="collapse">Q2. 發佈時間 ?</a>
+                </h3>
+                <div class="collapse" id="faq_2">
+                    <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5 pb-0">
+                        <p class="pb-0">
+                            待定。
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </li>
+
+        <li class="col-12 my-4">
+            <div class="card bg-white py-4 mx-4 radius-2">
+                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
+                    <a href="#faq_3" class="stretched-link text-black text-decoration-none" data-bs-toggle="collapse">Q3. MINT價格是多少?</a>
+                </h3>
+                <div class="collapse" id="faq_3">
+                    <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5 pb-0">
+                        <p class="pb-0">
+                            Mint價格第一波為1 SOL。
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </li>
+
+        <li class="col-12 my-4">
+            <div class="card bg-white py-4 mx-4 radius-2">
+                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
+                    <a href="#faq_4" class="stretched-link text-black text-decoration-none" data-bs-toggle="collapse">Q4. 我可以用我的WANA NFT做什麼?</a>
+                </h3>
+                <div class="collapse" id="faq_4">
+                    <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5 pb-0">
+                        <p class="pb-0">
+                            作為NFT持有者，您可以擁有屬於自己鏈上的NFT，可以選擇持有或販售，在未來路線圖規劃，您將可以替NFT更換您喜愛的造型、依造型算力獲得豐厚獎勵。
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </li>
+
+        <li class="col-12 my-4">
+            <div class="card bg-white py-4 mx-4 radius-2">
+                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
+                    <a href="#faq_5" class="stretched-link text-black text-decoration-none" data-bs-toggle="collapse">Q5. 如果NFT售完怎麼辦 ?</a>
+                </h3>
+                <div class="collapse" id="faq_5">
+                    <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5 pb-0">
+                        <p class="pb-0">
+                            您可以在Solana Art上購買。
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </li>
+
+        <li class="col-12 my-4">
+            <div class="card bg-white py-4 mx-4 radius-2">
+                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
+                    <a href="#faq_6" class="stretched-link text-black text-decoration-none" data-bs-toggle="collapse">Q6. 最後注意安全、我們關心每一位夥伴</a>
+                </h3>
+                <div class="collapse" id="faq_6">
+                    <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5 pb-0">
+                        <p class="pb-0">
+                            1、切勿與任何人分享您的私鑰或助記詞。<br>
+                            2、切勿單擊通過 Discord、Twitter 或其他渠道上的直接消息發送給您的網址。<br>
+                            3、僅信任在本網站或官方 Discord 服務器上頻道中發佈的官方信息。<br>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </li>
+
+    </ul>
+</div>
+<footer class="container-fluid bg-foot">
+    <div class="d-none d-xl-block">
+        <div class="row pt-3">
+            <div class="col-12">
+                <div class="d-flex flex-row justify-content-center">
+                    <a href="#" class="footer-brand">
+                        <img src="assets/logo/WANA_LOGO_banner.png" height="48" alt="WANA-Logo"/>
+                    </a>
+
+                    <div class="d-flex flex-row align-items-center">
+                        <a class="nav-link text-white" href="#about">About</a>
+                        <a class="nav-link text-white" href="#roadmap">Roadmap</a>
+                        <a class="nav-link text-white" href="#faq">FAQ</a>
+                        <a class="nav-link disabled" href="#">Team</a>
+                        <a class="nav-link disabled" href="#">Collection</a>
+                        <a class="nav-link disabled" href="#">Mint</a>
+                        <a class="nav-link disabled" href="#">MyWANA</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="d-flex flex-row justify-content-center">
+                    <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.svg" height="40" alt="instagram"/></a>
+                    <a class="nav-link text-white" href="https://discord.com/invite/PJv2U32JNJ" target="_blank"><img src="assets/icon/DiscordLogo.svg" height="40" alt="discord"/></a>
+                    <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.svg" height="40" alt="twitter"/></a>
+                    <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.svg" height="40" alt="facebook"/></a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="d-block d-xl-none">
+        <div class="row">
+            <div class="col-6 col-lg-4 offset-3 offset-lg-4 pt-3 pt-sm-5">
+                <div class="row justify-content-center">
+                    <div class="col-3">
+                        <img src="assets/logo/WANA_LOGO.png" class="img-fluid" alt="WANA-Logo"/>
+                    </div>
+                </div>
+                <ul class="d-flex flex-column list-unstyled footer-menu text-center mt-3 pt-3 pt-sm-5">
+                    <li><a class="nav-link text-white" href="#about">About</a></li>
+                    <li><a class="nav-link text-white" href="#roadmap">Roadmap</a></li>
+                    <li><a class="nav-link text-white" href="#faq">FAQ</a></li>
+                    <li><a class="nav-link disabled" href="#">Team</a></li>
+                    <li><a class="nav-link disabled" href="#">Collection</a></li>
+                    <li><a class="nav-link disabled" href="#">Mint</a></li>
+                    <li><a class="nav-link disabled" href="#">MyWANA</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <hr class="text-white">
+    <div class="row text-center">
+        <div class="text-white pt-1 pb-2">@ 2022 WANA</div>
+    </div>
+</footer>
 </body>
 </html>
 
