change font weight to medium

--- a/v2/index.html
+++ b/v2/index.html
@@ -83,7 +83,6 @@
 
 </div>
 
-<!-- Mint Coming soon... -->
 <div class="container d-flex justify-content-center position-relative mv-up-9">
     <div class="col-10 bg-base mint-coming-soon">
         <h3 class="text-white h1">0 / Coming Soon...</h3>
@@ -94,38 +93,40 @@
     </div>
 </div>
 
-<div class="container bg-light py-5 radius-2">
-    <div class="row px-3">
-        <div class="col-12 text-center py-5 my-5 effect-text-brand">
-            <div class="d-none d-lg-block">
-                <h1 class="banner-text-h1">入住 WANA 星之前，需要知道的事</h1>
+<div class="container">
+    <div class="bg-light radius-2 mx-2 py-5">
+        <div class="row px-3">
+            <div class="col-12 text-center py-5 my-5 effect-text-brand">
+                <div class="d-none d-lg-block">
+                    <h1 class="banner-text-h1">入住 WANA 星之前，需要知道的事</h1>
+                </div>
+                <div class="d-block d-lg-none">
+                    <h1 class="banner-text-h1">入住 WANA 星之前，</h1>
+                    <h1 class="banner-text-h1">需要知道的事</h1>
+                </div>
             </div>
-            <div class="d-block d-lg-none">
-                <h1 class="banner-text-h1">入住 WANA 星之前，</h1>
-                <h1 class="banner-text-h1">需要知道的事</h1>
+        </div>
+        <div class="row justify-content-around align-items-center py-3 py-lg-5">
+            <div class="col-8 col-lg-4 order-lg-last text-center">
+                <img src="assets/image/about_1.png" class="img-fluid"  alt="about wana gif1"/>
+            </div>
+            <div class="col-8 col-lg-6 py-5">
+                <h3 class="banner-text-h5">
+                    WANA 是人類發現的第一顆具有生命、有語言甚至有文化的新星！在WANA星上的居民稱作 WAVATAR ，並用「WANA！」作為打招呼，據調查發現總數為 11400 隻。
+                </h3>
             </div>
         </div>
-    </div>
-    <div class="row justify-content-around align-items-center py-3 py-lg-5">
-        <div class="col-8 col-lg-4 order-lg-last text-center">
-            <img src="assets/image/about_1.png" class="img-fluid"  alt="about wana gif1"/>
-        </div>
-        <div class="col-8 col-lg-6 py-5">
-            <h3 class="banner-text-h5">
-                WANA 是人類發現的第一顆具有生命、有語言甚至有文化的新星！在WANA星上的居民稱作 WAVATAR ，並用「WANA！」作為打招呼，據調查發現總數為 11400 隻。
-            </h3>
-        </div>
-    </div>
-    <div class="row justify-content-around align-items-center py-3 py-lg-5">
-        <div class="col-8 col-lg-4 py-5">
-            <img src="assets/image/about_2.gif" class="img-fluid"  alt="about wana gif2"/>
-        </div>
-        <div class="col-10 col-lg-6">
-            <h3 class="banner-text-h5">
-                WAVATAR 都能改變自己的樣貌，隨著不同的心情組合出喜愛的種類，目前已調查出貓族、鳥族、熊族、猴族還有許多人類無法言喻的種族等著你發現！
-                <br><br>
-                WANA 星正孕育一個正向、溫暖的藏身處，讓每位入籍者都能抒發心情、傳遞理想、提供建議，甚至還能因此獲得回饋！
-            </h3>
+        <div class="row justify-content-around align-items-center py-3 py-lg-5">
+            <div class="col-8 col-lg-4 py-5">
+                <img src="assets/image/about_2.gif" class="img-fluid"  alt="about wana gif2"/>
+            </div>
+            <div class="col-10 col-lg-6">
+                <h3 class="banner-text-h5">
+                    WAVATAR 都能改變自己的樣貌，隨著不同的心情組合出喜愛的種類，目前已調查出貓族、鳥族、熊族、猴族還有許多人類無法言喻的種族等著你發現！
+                    <br><br>
+                    WANA 星正孕育一個正向、溫暖的藏身處，讓每位入籍者都能抒發心情、傳遞理想、提供建議，甚至還能因此獲得回饋！
+                </h3>
+            </div>
         </div>
     </div>
 </div>
@@ -179,29 +180,23 @@
     </div>
 </div>
 
-<div class="container-fluid bg-base py-5">
-    <div class="row">
-        <div class="col-12 text-center py-5 my-5">
-            <h1 class="banner-text-h1 effect-text-light">WANA記憶盃</h1>
+<div class="container">
+    <div class="bg-light radius-2 mx-2 py-5">
+        <div class="row px-3 pt-5 mt-5 g-0">
+            <div class="col-12 text-center effect-text-brand">
+                <h1 class="banner-text-h1">Coming soon......</h1>
+            </div>
+        </div>
+        <div class="row px-3 pb-5 mb-5 g-0">
+            <div class="col-12 text-center text-black">
+                <h3>記憶挑戰賽即將登場！
+                    <br>
+                    凡完成賽事有機會獲得精美小禮物
+                </h3>
+            </div>
         </div>
     </div>
 </div>
-<div class="container bg-light radius-2 py-5">
-    <div class="row px-3 pt-5 mt-5">
-        <div class="col-12 text-center effect-text-brand">
-            <h1 class="banner-text-h1">Coming soon......</h1>
-        </div>
-    </div>
-    <div class="row px-3 pb-5 mb-5">
-        <div class="col-12 text-center text-black">
-            <h3>記憶挑戰賽即將登場！
-                <br>
-                凡完成賽事有機會獲得精美小禮物
-            </h3>
-        </div>
-    </div>
-</div>
-
 
 <div class="container-fluid bg-base py-5">
     <div class="row">
@@ -299,7 +294,7 @@
         <div class="col text-center text-white py-3">
             <div class="banner-text-h4 py-3">創始人</div>
             <img src="assets/image/TEAM/MEMBER1.png" class="img-fluid">
-            <div class="py-2"><a href="https://google.com" target="_blank"><img src="assets/icon/TwitterLogo.svg"></a></div>
+            <div class="py-2"><a href="https://twitter.com/zeng_wenxuan" target="_blank"><img src="assets/icon/TwitterLogo.svg"></a></div>
             <div class="banner-text-h4">Flora</div>
         </div>
         <div class="col text-center text-white py-3">
